@@ -20,29 +20,30 @@ to be evaluated from standard input.
 OPTIONS
 -------
 
-*@SMLload*='IMAGE'::
-  specifies heap image
-
-*@SMLrun*='RUNTIME'::
-  specifies runtime system
-
 *@SMLversion*::
   echo the version of SML/NJ to standard output and then exit
+
+*@SMLload*='IMAGE'::
+  specifies the name of the heap-image file to load.  The heap suffix can be omitted
+  as long as there there is not a file of the same name.
+
+*@SMLcmdname*='NAME'::
+  set the command name; this is the value returned by +CommandLine.name()+.
 
 *@SMLsuffix*::
   echo the heap suffix for the system to standard output and then exit
 
 *@SMLalloc*='SIZE'::
-  Specify the prefered sice of the
+  Specify the prefered size of the allocation area
 
-*@SMLcmdname*='NAME'::
-  set the command name; this is the value returned by +CommandLine.name()+.
-
-*@SMLverbose*::
-  show heap image load progress
+*@SMLrun*='RUNTIME'::
+  specifies runtime system
 
 *@SMLquiet*::
   load heap image silently (default)
+
+*@SMLverbose*::
+  show heap image load progress
 
 *@SMLobjects*::
   show list of executable objects
@@ -62,7 +63,6 @@ OPTIONS
 *-U*'name'::
   remove any definition of the CM variable 'name'.
 
-
 *-H*::
   produce complete help listing
 
@@ -76,7 +76,7 @@ OPTIONS
   list all the controls along with their default value
 
 *-s*'level'::
-  limited list of settings.
+  print a limited list of settings.
   The number of levels of the control heirarchy is controled by 'level', with 0 printing
   just the root of the heirarchy.
 
@@ -84,7 +84,7 @@ OPTIONS
   list all the controls along with their corresponding environment variables
 
 *-e*'level'::
-  limited list of environment variables;
+  print a limited list of environment variables;
   The number of levels of the control heirarchy is controled by 'level', with 0 printing
   just the root of the heirarchy.
 
@@ -115,7 +115,7 @@ The system is currently maintained by David MacQueen and John Reppy.
 
 COPYING
 -------
-Copyright (C) 2014 The Fellowship of SML/NJ
+Copyright (C) 2017 The Fellowship of SML/NJ
 
 This is free software; see the source for copying  conditions.   There  is  NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
